--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,2 +1,11 @@
 /* For information on how to create your own theme, please see:
 http://ionicframework.com/docs/theming/ */
+
+:root {
+  --ion-color-primary: #794cc6;
+  --ion-color-primary-rgb: 121, 76, 198;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #6d44b2;
+  --ion-color-primary-tint: #865ecc;
+}
